backend/test_output_2.txt
D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Γ¿» Unable to compile TypeScript:
src/test_gemini.ts(41,35): error TS2304: Cannot find name 'e'.
src/test_gemini.ts(42,13): error TS2304: Cannot find name 'e'.
src/test_gemini.ts(46,1): error TS1472: 'catch' or 'finally' expected.

    at createTSError (D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (D:\MinorProject\intellicampus-ai-insights\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2304, 2304, 1472 ]
}
